<resources>
    <string name="app_name">doitmission09</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_birth_select">생년월일을 선택해주세요</string>
    <string name="confirm">확</string>
    <string name="birth">생년월일</string>
    <string name="age">나이</string>
    <string name="name">이름</string>
    <string name="age_unit">세</string>
    <string name="information">고객정보 입력</string>
    <string name="save">저장</string>
    <string name="message_save">저장되었습니다. </string>
</resources>