<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CustomerInfoFragment"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:layout_marginLeft="20dp"

            />
        <EditText
            android:id="@+id/age"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number"
            android:layout_marginLeft="20dp"

            />
        <Button
            android:id="@+id/birth_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/birth"
            android:inputType="date"
            android:layout_marginLeft="20dp"
            />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginLeft="20dp"

            />

</LinearLayout>